[package]
name = "async-quic"
version = "0.3.0"
edition = "2021"
description = "runtime independent async quic implementation"
license = "Apache-2.0 OR MIT"

[dependencies]
async-net = "1.7.0"
futures = "0.3.25"
log = "0.4.17"
noop-waker = "0.1.0"
quinn-proto = "0.9.2"
bytes = "1.3"
async-io = "1.12.0"

[dev-dependencies]
simple_logger = "2.1.0"
smol = "1.2.5"
clap = { version = "3.1.18", features = ["derive"] }
rcgen = "0.9.3"
anyhow = "1.0.44"
rustls = "0.20.8"
