[package]
name = "async-quic"
version = "0.3.1"
authors = ["Florian Uekermann <florian@uekermann.me>"]
edition = "2021"
description = "runtime independent async quic implementation based on quinn-proto"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/async-quic"
keywords = ["quic", "async",]
categories = ["network-programming"]

[dependencies]
futures = "0.3.25"
log = "0.4.17"
noop-waker = "0.1.0"
quinn-proto = "0.9.2"
bytes = "1.3"
async-io = "1.12.0"
quinn-udp = "0.3.2"
rustls = "0.20.8"
h3 = { git = "https://github.com/FlorianUekermann/h3", branch="traits" }
event-listener = "2.5.3"
thiserror = { version = "1.0", default-features = false }
slab = { version = "0.4.8", default-features = false }

[dev-dependencies]
simple_logger = "2.1.0"
smol = "1.2.5"
smol-potat = "1.1.2"
clap = { version = "3.1.18", features = ["derive"] }
rcgen = "0.9.3"
anyhow = "1.0.44"
quinn = { version="0.9.3", features=["runtime-async-std", "futures-io"] }
lazy_static = "1.4.0"
test-log = "0.2.11"
env_logger = "0.10.0"
http = "0.2.8"
rand = "0.8.5"
